--- a/css/universal.css
+++ b/css/universal.css
@@ -12,4 +12,25 @@ body {
     background-color: var(--main-bg-color);
     font-family: 'Roboto';
     color: var(--main-text-color);
+    margin: 0;
+}
+
+.nav {
+    width: 100%;
+    height: 47px;
+    background-color: var(--sub1-bg-color);
+    box-shadow: 2px 0px 4px #000000;
+}
+
+.box-container {
+    width: 95%;
+    background-color: var(--sub2-bg-color);
+    box-shadow: 2px 0px 2px #000000;
+}
+
+.title {
+    margin: 0;
+    font-size: 24pt;
+    font-weight: lighter;
+    text-align: center;
 }
