--- a/css/universal.css
+++ b/css/universal.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+
 :root {
     --main-bg-color: #303030;
     --sub1-bg-color: #363636;
@@ -10,28 +12,30 @@
 
 body {
     background-color: var(--main-bg-color);
-    font-family: 'Roboto';
+    font-family: Roboto;
     color: var(--main-text-color);
     margin: 0;
 }
 
 .nav {
     width: 100%;
-    height: 47px;
+    height: 50px;
     background-color: var(--sub1-bg-color);
-    box-shadow: 2px 0px 4px #000000;
+    box-shadow: 0px 2px 4px #000000;
 }
 
 .box-container {
     width: 95%;
     background-color: var(--sub2-bg-color);
-    box-shadow: 2px 0px 2px #000000;
-	margin: 0 auto;
+    box-shadow: 0px 2px 2px #000000;
+    border-radius: 8px;
+    margin: 2.5% auto;
 }
 
 .title {
     margin: 0;
-    font-size: 24pt;
-    font-weight: lighter;
+    font-size: 22pt;
+    font-weight: 300;
+    line-height: 50px;
     text-align: center;
 }
