--- a/css/universal.css
+++ b/css/universal.css
@@ -17,6 +17,10 @@ body {
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+
 .nav {
     width: 100%;
     height: 50px;
@@ -30,12 +34,56 @@ body {
     box-shadow: 0px 2px 2px #000000;
     border-radius: 8px;
     margin: 2.5% auto;
+    overflow: hidden;
 }
 
 .title {
     margin: 0;
     font-size: 22pt;
     font-weight: 300;
+}
+
+.title--nav {
     line-height: 50px;
     text-align: center;
+}
+
+p.content {
+    color: var(--sub-text-color);
+    font-weight: 300;
+    font-size: 12pt;
+}
+
+.box-bottom {
+    background-color: var(--sub1-bg-color);
+    overflow: hidden;
+    padding: 5px;
+}
+
+
+
+/** TASK LIST **/
+.box-container--task {
+    min-height: 0px;
+}
+
+.box-bottom > .content--number-of-people {
+    float: left;
+    background-color: var(--sub2-bg-color);
+    padding: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+}
+
+.box-bottom > .content--due-date {
+    float: right;
+    padding: 5px;
+}
+
+.title--task {
+    margin: 10px;
+}
+
+.content--task {
+    margin: 10px 10px 10px 11px;
 }
