icon added task pane design complete

--- a/css/universal.css
+++ b/css/universal.css
@@ -143,6 +143,11 @@ p.content {
     color: var(--sub-text-color);
 }
 
+.icon--menu-pane {
+    width: 15px;
+    height: 15px;
+    padding: 0 10px;
+}
 
 /** TASK LIST **/
 .title--task {
