menu pane animation

--- a/css/universal.css
+++ b/css/universal.css
@@ -115,6 +115,12 @@ p.content {
     width: 80%;
     height: 100%;
     display: none;
+
+    text-overflow: ellipsis;
+
+    /* Required for text-overflow to do anything */
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .title-menu {
