--- a/css/universal.css
+++ b/css/universal.css
@@ -53,6 +53,11 @@ p {
 .title--nav {
     line-height: 50px;
     text-align: center;
+    width: calc(100% - 160px);
+    margin: 0 auto;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 p.content {
@@ -88,7 +93,7 @@ p.content {
     right: 10px;
 }
 
-.setting-button-img-nav {
+.information-button-img-nav {
     position: absolute;
     width: 32px;
     height: 32px;
@@ -137,6 +142,7 @@ p.content {
 
 .menu-list-deeper {
     border-top: 3px solid var(--main-bg-color);
+    border-bottom: 3px solid var(--main-bg-color);
     padding-left: 1em;
 }
 
