--- a/css/universal.css
+++ b/css/universal.css
@@ -284,7 +284,7 @@ p.content {
 
 .people-list  {
     padding: 0;
-    margin: 10px;
+    margin: 10px 11px;
     list-style: none;
     color: var(--sub-text-color);
     column-count: 2;
