--- a/css/universal.css
+++ b/css/universal.css
@@ -361,3 +361,37 @@ p.content {
 	margin-right: 10px;
 }
 
+
+/** group Info **/
+
+.box-container--group {
+    padding: 10px;
+}
+
+.box-container--group-1 {
+    padding: 10px;
+    overflow: scroll;
+}
+
+.name-container-1{
+    float: left;
+    width: 45%;
+    text-align: left;
+    margin-left: 18%;   
+}
+
+.name-container-2{
+    float: left;
+    text-align: left;
+}
+
+.box-container-group {
+    width: 25%;
+    background-color: var(--sub2-bg-color);
+    box-shadow: 0px 2px 2px #000000;
+    border-radius: 8px;
+    margin: 2.5% auto;
+    overflow: hidden;
+    text-align: center;
+    font-size: 15pt;
+}
