menu pane scroll behaviour changed

--- a/css/universal.css
+++ b/css/universal.css
@@ -99,6 +99,12 @@ p.content {
     right: 10px;
 }
 
+.close-button-img--menu {
+    position: relative;
+    bottom: 35px;
+    top: auto;
+}
+
 .information-button-img-nav {
     position: absolute;
     width: 32px;
@@ -120,11 +126,13 @@ p.content {
 
 .menu-panel {
     background-color: var(--sub1-bg-color);
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
     width: 80%;
-    height: 100%;
     display: none;
 
     text-overflow: ellipsis;
