media query setup

--- a/css/universal.css
+++ b/css/universal.css
@@ -405,3 +405,12 @@ p.content {
 	margin-right: 10px;
 }
 
+/* Tablets */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Desktop */
+@media only screen and (min-width: 1200px) {
+
+}
