--- a/css/universal.css
+++ b/css/universal.css
@@ -438,6 +438,8 @@ p.content {
     overflow: hidden;
     text-align: center;
     font-size: 15pt;
+}
+
 /* Tablets */
 @media only screen and (min-width: 600px) {
 
