--- a/css/universal.css
+++ b/css/universal.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
-:root {
+html {
+    --main-bg-color: #303030;
+    --sub1-bg-color: #363636;
+    --sub2-bg-color: #404040;
+    --main-text-color: #FFFFFF;
+    --sub-text-color: #C6C6C6;
+    --notdone-color: #FF3B30;
+    --done-color: #28CD3C;
+	--shadow-color: #000000;
+}
+
+html.light {
     --main-bg-color: #303030;
     --sub1-bg-color: #363636;
     --sub2-bg-color: #404040;
@@ -30,7 +41,7 @@ a, a:link, a:visited, a:hover, a:active {
     width: 100%;
     height: 50px;
     background-color: var(--sub1-bg-color);
-    box-shadow: 0px 2px 4px #000000;
+    box-shadow: 0px 2px 4px var(--shadow-color);
     position: fixed;
     top: 0;
     z-index: 1000;
@@ -44,7 +55,7 @@ a, a:link, a:visited, a:hover, a:active {
 .box-container {
     width: 95%;
     background-color: var(--sub2-bg-color);
-    box-shadow: 0px 1px 3px #000000;
+    box-shadow: 0px 1px 3px var(--shadow-color);
     border-radius: 8px;
     margin: 2.5% auto;
     overflow: hidden;
@@ -296,7 +307,7 @@ p.content {
     background-color: var(--sub2-bg-color);
     border-radius: 12px;
 
-    box-shadow: 0px 0px 5px #000000;
+    box-shadow: 0px 0px 5px var(--shadow-color);
 }
 
 .icon--add-task {
@@ -481,7 +492,7 @@ button.dropdown {
 	width: 10px;
 	height: 10px;
 	background-color: #FFFFFF;
-	border: 1px solid #000000;
+	border: 1px solid var(--shadow-color);
 	display: inline-block;
 	margin-right: 5px;
 }
@@ -622,7 +633,7 @@ button.dropdown {
 .box-container-group {
     width: 80%;
     background-color: var(--sub2-bg-color);
-    box-shadow: 0px 2px 2px #000000;
+    box-shadow: 0px 2px 2px var(--shadow-color);
     border-radius: 8px;
     margin: 2.5% auto;
     font-size: 11pt;
@@ -643,7 +654,7 @@ button.dropdown {
 .box-container-signup {
     width: 95%;
     background-color: var(--sub2-bg-color);
-    box-shadow: 0px 2px 2px #000000;
+    box-shadow: 0px 2px 2px var(--shadow-color);
     border-radius: 8px;
     margin: 4% auto;
     font-size: 11pt;
