--- a/css/universal.css
+++ b/css/universal.css
@@ -22,6 +22,13 @@ html.light {
 	--shadow-color: #EFEFEF;
 }
 
+.rotated {
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+}
+
 body {
     background-color: var(--main-bg-color);
     font-family: Roboto;
