Add task placeholder

--- a/css/universal.css
+++ b/css/universal.css
@@ -224,15 +224,42 @@ p.content {
 .textbox {
 	background-color: 2px solid var(--sub1-bg-color);
 	border: 0px;
-	border-bottom: 2px solid #808080;
-	margin: 10px;
-	font-size: 15pt;
-	color: var(--sub-text-color);
+	border-bottom: 1px solid var(--sub-text-color);
+    margin: 10px;
+    width: calc(100% - 20px);
+    font-size: 14pt;
+    font-family: Roboto;
+    font-weight: 300;
+	color: var(--main-text-color);
 }
 
 .textbox::placeholder {
-	font-size: 15pt;
+    font-size: 14pt;
 	color: var(--sub-text-color);
+}
+
+.textbox--area {
+    border: 1px solid var(--sub-text-color);
+    width: calc(100% - 25px);
+    font-size: 11pt;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.textbox--area::placeholder {
+    font-size: 11pt;
+}
+
+.input--date {
+    background-color: var(--sub2-bg-color);
+    color: var(--sub-text-color);
+    border: 1px solid var(--sub-text-color);
+    margin-left: 5px;
+    font-family: Roboto;
+}
+
+.label--date {
+    margin-left: 5px;
 }
 
 /** TASK LIST **/
