--- a/css/universal.css
+++ b/css/universal.css
@@ -221,6 +221,18 @@ p.content {
     padding: 0 10px;
 }
 
+.button {
+	background-color: var(--sub2-bg-color);
+	border: 0px;
+	color: var(--main-text-color);
+	border-radius: 8px;
+	box-shadow: 0px 1px 3px var(--shadow-color);
+	font-family: Roboto;
+	font-size: 15pt;
+	font-weight: 300;
+	
+	
+}
 .textbox {
 	background-color: 2px solid var(--sub1-bg-color);
 	border: 0px;
@@ -554,7 +566,7 @@ button.dropdown {
 	float: right;
 	text-align: center;
 	line-height: 35px;
-	margin-right: 10px;
+	margin-right: 2.5%;
 }
 
 /** home page **/
