--- a/css/universal.css
+++ b/css/universal.css
@@ -70,6 +70,17 @@ a, a:link, a:visited, a:hover, a:active {
 }
 
 
+.button {
+	background-color: var(--sub2-bg-color);
+	border: 0px;
+	color: var(--main-text-color);
+	border-radius: 8px;
+	box-shadow: 0px 1px 3px var(--shadow-color);
+	font-family: Roboto;
+	font-size: 15pt;
+	font-weight: 300;	
+}
+
 .title {
     margin: 0;
     font-size: 18pt;
@@ -134,6 +145,7 @@ p.content {
 }
 
 .information-button-img-nav {
+    background: none;
     position: absolute;
     width: 32px;
     height: 32px;
@@ -221,20 +233,8 @@ p.content {
     padding: 0 10px;
 }
 
-.button {
-	background-color: var(--sub2-bg-color);
-	border: 0px;
-	color: var(--main-text-color);
-	border-radius: 8px;
-	box-shadow: 0px 1px 3px var(--shadow-color);
-	font-family: Roboto;
-	font-size: 15pt;
-	font-weight: 300;
-	
-	
-}
 .textbox {
-	background-color: 2px solid var(--sub1-bg-color);
+	background-color: 2px solid var(--sub2-bg-color);
 	border: 0px;
 	border-bottom: 1px solid var(--sub-text-color);
     margin: 10px;
@@ -251,27 +251,21 @@ p.content {
 }
 
 .textbox--area {
-    border: 1px solid var(--sub-text-color);
     width: calc(100% - 25px);
     font-size: 11pt;
     margin-top: 0px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
+    background: var(--sub1-bg-color);
+    border-bottom: 0;
 }
 
 .textbox--area::placeholder {
     font-size: 11pt;
 }
 
-.input--date {
-    background-color: var(--sub2-bg-color);
-    color: var(--sub-text-color);
-    border: 1px solid var(--sub-text-color);
-    margin-left: 5px;
-    font-family: Roboto;
-}
 
-.label--date {
-    margin-left: 5px;
+.inline-buttons-container {
+    display: block;
 }
 
 /** TASK LIST **/
@@ -287,6 +281,12 @@ p.content {
     margin-right: 5px;
     border-radius: 5px;
 }
+
+/* TODO BUTTON FEEDBACK
+.box-bottom > .content--number-of-people:hover {
+    border: 1px solid var(--sub-text-color);
+}
+*/
 
 .box-bottom > .content--due-date {
     float: right;
@@ -445,6 +445,42 @@ button.dropdown {
     display: none;
 }
 
+
+
+.button--cancel-task, .button--save-task {
+    float: right;
+    box-shadow: none;
+    background-color: var(--sub2-bg-color);
+    font-size: 14pt;
+    color: var(--sub-text-color);
+    height: 30px;
+}
+
+.button--cancel-task:hover, .button--save-task:hover {
+    background-color: var(--sub2-bg-color);
+    color: var(--main-text-color);
+    border: 1px solid var(--sub-text-color);
+    height: 28px;
+}
+
+.button--cancel-task {
+    margin-left: 5px;
+}
+
+.label--date {
+    margin-left: 12px;
+    margin-bottom: 5px;
+    font-size: 11pt;
+}
+
+
+.input--date {
+    background-color: var(--sub1-bg-color);
+    color: var(--sub-text-color);
+    font-family: Roboto;
+    border: none;
+    border-radius: 5px;
+}
 
 /** Landing Page **/
 .title--landing-page{
@@ -758,6 +794,10 @@ button.dropdown {
         margin-top: 0;
         display: inline-block;
         width: 100%;
+    }
+
+    .menu-panel {
+        width: 45%;
     }
 }
 
