--- a/css/universal.css
+++ b/css/universal.css
@@ -351,7 +351,7 @@ p.content {
     width: 48px;
     height: 48px;
 
-    background-color: var(--sub2-bg-color);
+    background-color: var(--sub-text-color);
     border-radius: 12px;
 
     box-shadow: 0px 0px 5px var(--shadow-color);
