User name upadate on preference page
update display name on firebase

Able to edit and save name

able to edit email but not linked to firebase yet

--- a/public/css/universal.css
+++ b/public/css/universal.css
@@ -623,6 +623,11 @@ button.dropdown {
 	padding-left: 2px;
 }
 
+.textbox--preference {
+	background-color: var(--sub2-bg-color); 
+	border: 0px;
+}
+
 .preference--button {
 	width: 90px;
 	height: 35px;
