button glitch fix style fix

--- a/public/css/universal.css
+++ b/public/css/universal.css
@@ -587,7 +587,8 @@ button.dropdown {
 }
 
 .box-top-title--preference {
-	font-size: 17pt;
+    font-size: 17pt;
+    display: inline;
 }
 
 .content--preference{
