--- a/public/css/universal.css
+++ b/public/css/universal.css
@@ -268,6 +268,26 @@ p.content {
     display: block;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--sub2-bg-color); 
+}
+
+::-webkit-scrollbar-corner {
+    background: var(--sub2-bg-color); 
+}
+ 
+::-webkit-scrollbar-thumb {
+    background: var(--sub1-bg-color); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 /** TASK LIST **/
 .title--task {
     font-size: 16pt;
@@ -295,6 +315,7 @@ p.content {
 
 .content--task {
     margin: 10px 10px 10px 11px;
+    min-height: 30px;
 }
 
 .dropdown-icon--task {
@@ -333,6 +354,10 @@ p.content {
     width: 32px;
     height: 32px;
     background-size: cover;
+}
+
+.checkbox:hover {
+    filter: brightness(150%) drop-shadow(0px 0px 5px var(--main-bg-color));
 }
 
 .checkbox-not-checked {
@@ -482,26 +507,19 @@ button.dropdown {
     border-radius: 5px;
 }
 
-
-::-webkit-scrollbar {
-    width: 10px;
+.task-delete {
+    width: 20px;
+    height: 20px;
+    float: right;
+    position: relative;
+    right: -18px;
+    top: 50px;
 }
 
-::-webkit-scrollbar-track {
-    background: var(--sub2-bg-color); 
+.task-delete:hover {
+    filter: brightness(120%);
 }
 
-::-webkit-scrollbar-corner {
-    background: var(--sub2-bg-color); 
-}
- 
-::-webkit-scrollbar-thumb {
-    background: var(--sub1-bg-color); 
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-}
 
 /** Landing Page **/
 .title--landing-page{
